# rotor_management_elabftw

./: .gitignore  LICENSE  README.md  Rotor_catalogue.py  dashboard.py  dashbord.py  pyproject.toml  update_from_ods.py
api_services/: client.py  rotor_manager.py  types.py
pages/: seach_by_owner.py  search_rotor_history.py  update.py
utils/: data_parser.py  supporting_data.py
