[project]
name = "rotor-management-elabftw"
version = "0.2.2"
description = "A simple and intuitive web-based application for managing laboratory inventories (solid-state NMR rotors) integrated with eLabFTW as backend database."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elabapi-python>=5.4.2",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "odfpy>=1.4.1",
]
